# rse_warwick

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.github  README.md  devbox.json  recipe.json
.github/workflows/: build-docker.yaml
assets/styling/: main.css  poi.css
src/: main.rs
src/components/: map.rs  mod.rs  storage.rs
src/views/: home.rs  mod.rs  navbar.rs  poi.rs
